// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. should render with an intersection observer using the expected options 1`] = `
Object {
  "rootMargin": "50px",
  "threshold": 0.5,
}
`;

exports[`2. should render a good quality image if it is visible 1`] = `
<div>
  <div>
    <img
      alt=""
      src="https://lead1.io&resize=660"
    />
    <div>
      <div />
    </div>
  </div>
</div>
`;

exports[`3. should render a poor quality image if it is not visible 1`] = `
<div>
  <div>
    <img
      alt=""
      src="https://lead2.io&resize=100"
    />
    <div>
      <div />
    </div>
  </div>
</div>
`;

exports[`4. should render good quality images if there is no intersectionobserver 1`] = `
Array [
  <div>
    <div>
      <img
        alt=""
        src="https://lead1.io&resize=660"
      />
      <div>
        <div />
      </div>
    </div>
  </div>,
  <div>
    <div>
      <img
        alt=""
        src="https://lead2.io&resize=660"
      />
      <div>
        <div />
      </div>
    </div>
  </div>,
]
`;

exports[`5. should not render good quality images if the item is scrolled past quickly 1`] = `
Array [
  <img
    alt=""
    src="https://lead1.io&resize=100"
  />,
  <img
    alt=""
    src="https://lead2.io&resize=660"
  />,
  <img
    alt=""
    src="https://lead3.io&resize=660"
  />,
  <img
    alt=""
    src="https://lead4.io&resize=660"
  />,
  <img
    alt=""
    src="https://lead5.io&resize=660"
  />,
]
`;
